Import of GRICHTER/Apache-ImageMagick-2.0b4 from CPAN.
gitpan-cpan-distribution: Apache-ImageMagick
gitpan-cpan-version:      2.0b4
gitpan-cpan-path:         GRICHTER/Apache-ImageMagick-2.0b4.tar.gz
gitpan-cpan-author:       GRICHTER
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,4 +1,9 @@
 
+2.0b4 14. Sept 2001
+
+ - fixed a bug in Makefile.PL which caused make to complain about
+   ImageMagick.o, which doesn't exist. Reported by Robert.
+
 2.0b3 13. Aug 2001 
 
  - Added mod_aimproxy
