--- a/Changes
+++ b/Changes
@@ -1,4 +1,9 @@
 
+2.0b5 27. Nov 2001
+
+ - make sure cache files are closed after they have been written.
+   Bug reported by Robert.
+
 2.0b4 14. Sept 2001
 
  - fixed a bug in Makefile.PL which caused make to complain about
